# BuildWrapper

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  README  README.md  buildwrapper.cabal  newbuildutility.txt
docs/: buildwrapper_0.2.2_rn.txt  buildwrapper_0.2.3_rn.txt  buildwrapper_0.3.0_rn.txt  buildwrapper_0.4.0_rn.txt  buildwrapper_0.5.0_rn.txt  buildwrapper_0.5.1_rn.txt  buildwrapper_0.5.2_rn.txt  buildwrapper_0.6.0_rn.txt  buildwrapper_0.6.1_rn.txt
src-exe/: Main.hs
src-exe/Language/Haskell/BuildWrapper/: CMD.hs
src/Language/Haskell/BuildWrapper/: API.hs  Base.hs  CMD.hs  Cabal.hs  Find.hs  GHC.hs  GHCStorage.hs  Packages.hs  Src.hs
test/: Main.hs
test/Language/Haskell/BuildWrapper/: APITest.hs  BuildForDBTests.hs  CMDLongRunningTests.hs  CMDTests.hs  CabalDevTests.hs  GHCTests.hs  ImportsTests.hs  Tests.hs  UsagesTests.hs
