name:           buildwrapper
version:        0.8.5
cabal-version:  >= 1.8
build-type:     Simple
license:        BSD3
license-file:   LICENSE
synopsis:       A library and an executable that provide an easy API for a Haskell IDE
description:    Buildwrapper is an alternative to scion. 
  It provides services to configure, build and give information on source files to help IDEs manage Haskell projects.
  You can use buildwrapper to build project and retrieve errors, get outline for each module source, get the type of something inside a source file, get lexer tokens, etc.
  Buildwrapper is used in the EclipseFP project (Eclipse plugins for Haskell development)
category:       Development
stability:      beta
maintainer:     JP Moresmau <jpmoresmau@gmail.com>
author:         JP Moresmau <jpmoresmau@gmail.com>, based on the work of Thomas Schilling and others
homepage:       https://github.com/JPMoresmau/BuildWrapper
extra-source-files: README.md

library
  hs-source-dirs:  src
  build-depends:   
                   base < 5,
                   filepath,
                   mtl,
                   directory,
                   Cabal,
                   dynamic-cabal >=0.3 && <0.4,
                   process,
                   regex-tdfa,
                   ghc,
                   ghc-paths,
                   syb,
                   text,
                   containers,
                   vector >= 0.8,
                   haskell-src-exts >= 1.12 && <1.15,
                   cpphs,
                   old-time,
                   aeson >=0.7 && <0.8,
                   unordered-containers,
                   utf8-string,
                   bytestring,
                   attoparsec>=0.11 && <0.12,
                   transformers,
                   deepseq
  ghc-options:     -Wall -fno-warn-unused-do-bind
  exposed-modules: 
                   Language.Haskell.BuildWrapper.API,
                   Language.Haskell.BuildWrapper.Base,
                   Language.Haskell.BuildWrapper.Cabal,
                   Language.Haskell.BuildWrapper.GHC
  extensions:      CPP
  other-modules:   
                   Language.Haskell.BuildWrapper.GHCStorage,
                   Language.Haskell.BuildWrapper.Packages,
                   Language.Haskell.BuildWrapper.Src
  if impl(ghc >= 7.6)
    build-depends: 
                    time


executable buildwrapper
  hs-source-dirs:  src-exe
  main-is:         Main.hs
  build-depends:   
                   base < 5,
                   buildwrapper,
                   cmdargs,
                   filepath,
                   Cabal,
                   dynamic-cabal >=0.3 && <0.4,
                   directory,
                   mtl,
                   ghc,
                   cpphs,
                   haskell-src-exts >= 1.12 && <1.15,
                   old-time,
                   ghc-paths,
                   vector >= 0.8,
                   containers,
                   syb,
                   process,
                   regex-tdfa,
                   text,
                   aeson >=0.4,
                   bytestring,
                   transformers
  ghc-options:     -Wall -fno-warn-unused-do-bind -optl -s
  other-modules:   Language.Haskell.BuildWrapper.CMD
  if impl(ghc >= 7.6)
    build-depends: 
                    time

test-suite buildwrapper-test
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  build-depends:   
                   base < 5,
                   buildwrapper,
                   HUnit,
                   mtl,
                   filepath,
                   directory,
                   Cabal,
                   dynamic-cabal,
                   old-time,
                   aeson >=0.4,
                   text,
                   process,
                   bytestring,
                   attoparsec,
                   HTF > 0.9,
                   transformers,
                   vector,
                   unordered-containers,
                   containers
  main-is:         Main.hs
  ghc-options:     -Wall -fno-warn-unused-do-bind -optl -s
  other-modules:   
                   Language.Haskell.BuildWrapper.APITest,
                   Language.Haskell.BuildWrapper.CMDTests,
                   Language.Haskell.BuildWrapper.GHCTests,
                   Language.Haskell.BuildWrapper.UsagesTests,
                   Language.Haskell.BuildWrapper.ImportsTests,
                   Language.Haskell.BuildWrapper.CabalDevTests,
                   Language.Haskell.BuildWrapper.CMDLongRunningTests
  if impl(ghc >= 7.6)
    build-depends: 
                    time

source-repository head
  type:     git
  location: git://github.com/JPMoresmau/BuildWrapper.git
